--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   height: 400px;
   position: fixed;
   background-color: grey;
-  top: 180px;
+  top: 120px;
   left: 410px;
   display: flex;
   border-radius: 5px;
@@ -59,5 +59,16 @@ body {
   height: 50px;
   border-radius: 20px;
   border: 1px solid white;
+  color: white;
+}
+.goto-button{
+  position: relative;
+  top: 590px;
+  left: 700px;
+  width: 120px;
+  height: 50px;
+  border-radius: 20px;
+  border: 1px solid white;
+  background-color: red;
   color: white;
 }
