--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
   background-color: red;
   color: white;
 }
-.gotorep{
+.gotorep-button{
  position: relative;
   top: 90px;
   left: 700px;
